style.css
*{
  margin:0;
  padding:0;
  box-sizing:border-box;
  font-family:Poppins,sans-serif;
}

body{
  background:#0f172a;
  color:#fff;
  scroll-behavior:smooth;
}

body.light{
  background:#f1f5f9;
  color:#111;
}

body.light header{
  background:rgba(255,255,255,0.7);
}

body.light .project-card,
body.light .skill{
  background:#e2e8f0;
}

body.light .btn{
  background:#0ea5e9;
  color:#fff;
}

.container{
  width:90%;
  max-width:1200px;
  margin:auto;
}

header{
  position:sticky;
  top:0;
  backdrop-filter:blur(10px);
  background:rgba(15,23,42,0.7);
  z-index:1000;
}

.navbar{
  display:flex;
  justify-content:space-between;
  align-items:center;
  padding:15px 0;
}

.logo{
  font-weight:700;
  font-size:20px;
}

.right-controls{
  display:flex;
  align-items:center;
  gap:15px;
}

.nav-links{
  display:flex;
  gap:20px;
}

/*Dark Mode*/
.nav-links a{
  text-decoration:none;
  color:#ffffff;
  transition: color 0.3s ease;
}

/*Light Mode*/
body.light .nav-links a{
    color:#000000;
    }
    
.menu-toggle{
  display:none;
  font-size:22px;
  cursor:pointer;
}

#themeToggle{
  background:none;
  border:none;
  color:rgb(255, 255, 255);
  font-size:18px;
  cursor:pointer;
}

.home{
  min-height:100vh;
  display:flex;
  flex-direction:column;
  justify-content:center;
  align-items:center;
  text-align:center;
}

.profile-img{
  width:160px;
  height:160px;
  border-radius:50%;
  border:3px solid #38bdf8;
  margin-bottom:20px;
}

h1{font-size:2.5rem;}
h2{color:#38bdf8;margin-top:10px;}

.buttons{
  margin-top:20px;
  display:flex;
  gap:15px;
  flex-wrap:wrap;
}

.btn{
  padding:10px 20px;
  background:#38bdf8;
  border-radius:25px;
  text-decoration:none;
  color:#000;
  font-weight:600;
  transition:0.3s;
}

.btn:hover{
  transform:scale(1.05);
}

section{
  padding:80px 0;
}

.skills{
  display:flex;
  flex-wrap:wrap;
  gap:10px;
}

.skill{
  background:#1e293b;
  padding:10px 15px;
  border-radius:20px;
}

.project-container{
  display:grid;
  grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
  gap:25px;
}

.project-card{
  background:#1e293b;
  padding:15px;
  border-radius:10px;
}

.project-card img{
  width:100%;
  border-radius:8px;
}

.project-links{
  margin-top:10px;
  display:flex;
  gap:10px;
}

#contact{
  text-align:center;
}

footer{
  text-align:center;
  padding:20px;
  opacity:.6;
}

/* MOBILE FIX */
@media(max-width:768px){

  .nav-links{
    position:absolute;
    top:60px;
    right:0;
    background:#1e293b;
    flex-direction:column;
    width:200px;
    display:none;
    padding:15px;
  }

  .nav-links.active{
    display:flex;
  }

  .menu-toggle{
    display:block;
  }
}

